--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -111,24 +111,24 @@ jobs:
       #     vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
       #     doNotCache: false
 
-      # - name: Install vcpkg dependencies
-      #   env:
-      #     VCPKG_DEFAULT_HOST_TRIPLET: ${{ matrix.job.vcpkg-triplet }}
-      #   run: |
-      #     if ! $VCPKG_ROOT/vcpkg \
-      #       install \
-      #       --triplet ${{ matrix.job.vcpkg-triplet }} \
-      #       --x-install-root="$VCPKG_ROOT/installed"; then
-      #       find "${VCPKG_ROOT}/" -name "*.log" | while read -r _1; do
-      #         echo "$_1:"
-      #         echo "======"
-      #         cat "$_1"
-      #         echo "======"
-      #         echo ""
-      #       done
-      #       exit 1
-      #     fi
-      #   shell: bash
+      - name: Install vcpkg dependencies
+        env:
+          VCPKG_DEFAULT_HOST_TRIPLET: ${{ matrix.job.vcpkg-triplet }}
+        run: |
+          if ! $VCPKG_ROOT/vcpkg \
+            install \
+            --triplet ${{ matrix.job.vcpkg-triplet }} \
+            --x-install-root="$VCPKG_ROOT/installed"; then
+            find "${VCPKG_ROOT}/" -name "*.log" | while read -r _1; do
+              echo "$_1:"
+              echo "======"
+              cat "$_1"
+              echo "======"
+              echo ""
+            done
+            exit 1
+          fi
+        shell: bash
 
       - name: Build rustdesk
         run: |
