--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -104,12 +104,12 @@ jobs:
       #     Push-Location flutter ; flutter pub get ; Pop-Location
       #     ~/.cargo/bin/flutter_rust_bridge_codegen --rust-input ./src/flutter_ffi.rs --dart-output ./flutter/lib/generated_bridge.dart
 
-      # - name: Setup vcpkg with Github Actions binary cache
-      #   uses: lukka/run-vcpkg@v11
-      #   with:
-      #     vcpkgDirectory: C:\vcpkg
-      #     vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
-      #     doNotCache: false
+      - name: Setup vcpkg with Github Actions binary cache
+        uses: lukka/run-vcpkg@v11
+        with:
+          vcpkgDirectory: C:\vcpkg
+          vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
+          doNotCache: false
 
       - name: Install vcpkg dependencies
         env:
