--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,11 @@ on:
         required: true
         default: 'Both'
         type: string
+      filename:
+        description: "Filename"
+        required: true
+        default: 'rustdesk'
+        type: string
 
 
 env:
@@ -223,19 +228,19 @@ jobs:
           cp ./target/release/rustdesk-portable-packer.exe ./SignOutput/rustdesk-latest.exe
           mv ./target/release/rustdesk-portable-packer.exe ./SignOutput/rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}.exe
 
-      - name: Add MSBuild to PATH
-        uses: microsoft/setup-msbuild@v2
+      # - name: Add MSBuild to PATH
+      #   uses: microsoft/setup-msbuild@v2
 
-      - name: Build msi
-        if: env.UPLOAD_ARTIFACT == 'true'
-        run: |
-          pushd ./res/msi
-          python preprocess.py --arp -d ../../rustdesk
-          nuget restore msi.sln
-          msbuild msi.sln -p:Configuration=Release -p:Platform=x64 /p:TargetVersion=Windows10
-          cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk-latest.msi
-          mv ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}.msi
-          sha256sum ../../SignOutput/rustdesk-*.msi
+      # - name: Build msi
+      #   if: env.UPLOAD_ARTIFACT == 'true'
+      #   run: |
+      #     pushd ./res/msi
+      #     python preprocess.py --arp -d ../../rustdesk
+      #     nuget restore msi.sln
+      #     msbuild msi.sln -p:Configuration=Release -p:Platform=x64 /p:TargetVersion=Windows10
+      #     cp ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk-latest.msi
+      #     mv ./Package/bin/x64/Release/en-us/Package.msi ../../SignOutput/rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}.msi
+      #     sha256sum ../../SignOutput/rustdesk-*.msi
 
       # - name: Sign rustdesk self-extracted file
       #   if: env.UPLOAD_ARTIFACT == 'true' && env.SIGN_BASE_URL != ''
