--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,7 +70,7 @@ jobs:
   build-for-windows-flutter:
     name: Build Windows
     needs: [build-RustDeskTempTopMostWindow]
-    runs-on: windows-2022
+    runs-on: self-hosted
     strategy:
       fail-fast: false
       matrix:
