--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -177,12 +177,12 @@ jobs:
             ls -l ./libs/portable/Runner.res;
           fi
 
-      - name: Download RustDeskTempTopMostWindow artifacts
-        uses: actions/download-artifact@master
-        if: env.UPLOAD_ARTIFACT == 'true'
-        with:
-          name: topmostwindow-artifacts
-          path: "./rustdesk"
+      # - name: Download RustDeskTempTopMostWindow artifacts
+      #   uses: actions/download-artifact@master
+      #   if: env.UPLOAD_ARTIFACT == 'true'
+      #   with:
+      #     name: topmostwindow-artifacts
+      #     path: "./rustdesk"
 
       - name: Upload unsigned
         if: env.UPLOAD_ARTIFACT == 'true'
