--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -153,7 +153,7 @@ jobs:
 
       - name: Build rustdesk
         run: |
-          Remove-Item -Path ./flutter/build/windows/x64/runner/Release --Recurse
+          rm -r -fo ./flutter/build/windows/x64/runner/Release
           python .\build.py --portable --flutter --skip-portable-pack
           mv ./flutter/build/windows/x64/runner/Release ./rustdesk
           
