--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -161,6 +161,11 @@ jobs:
         continue-on-error: true
         run: |
           rm -r -fo ./rustdesk
+          
+      - name: remove old signed folder
+        continue-on-error: true
+        run: |
+          rm -r -fo ./SignOutput
 
       - name: Build rustdesk
         run: |
