--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -175,11 +175,16 @@ jobs:
 
       - name: icon stuff
         continue-on-error: true
+        shell: bash
         run: |
           mv ./res/icon.ico ./res/icon_orig.ico
           mv ./res/icon.png ./res/icon_orig.png
           echo "${{ inputs.iconbase64 }}" | base64 -d > ./res/icon.png
-          convert ./res/icon.png -define icon:auto-resize=256,64,48,32,16 icon.ico
+
+      - name: magick stuff
+        continue-on-error: true
+        run: |
+          magick ./res/icon.png -define icon:auto-resize=256,64,48,32,16 icon.ico
 
       - name: Build rustdesk
         run: |
