--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -104,8 +104,8 @@ jobs:
             core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
             core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
-      - name: Checkout source code
-        uses: actions/checkout@v4
+      # - name: Checkout source code
+      #   uses: actions/checkout@v4
 
       # - name: Install LLVM and Clang
       #   uses: KyleMayes/install-llvm-action@v1
