--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,11 @@ on:
         required: false
         default: ''
         type: string
+      appname:
+        description: "app name"
+        required: true
+        default: 'rustdesk'
+        type: string
       filename:
         description: "Filename"
         required: true
@@ -209,10 +214,9 @@ jobs:
 
       - name: icon stuff
         continue-on-error: true
-        shell: bash
         run: |
-          mkdir ./rustdesk/assets/
-          cp ./res/icon.png ./rustdesk/assets/icon.png
+          mv ./rustdesk/data/flutter_assets/assets/icon.svg ./rustdesk/data/flutter_assets/assets/icon.svg.bak
+          magick ./res/icon.png ./rustdesk/data/flutter_assets/assets/icon.svg
           
       #lines removed from above:
       #Invoke-WebRequest -Uri https://github.com/rustdesk-org/rdev/releases/download/usbmmidd_v2/usbmmidd_v2.zip -OutFile usbmmidd_v2.zip
