add icon to generator

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -202,15 +202,16 @@ jobs:
         shell: bash
         run: |
           cp ./Cargo.toml ./Cargo.toml.bak
-          sed -i -e 's|ProductName = "RustDesk"|ProductName = "${{ inputs.filename }}"|' ./Cargo.toml
-          sed -i -e 's|FileDescription = "RustDesk Remote Desktop"|FileDescription = "${{ inputs.filename }} Remote Desktop"|' ./Cargo.toml
-          sed -i -e 's|OriginalFilename = "rustdesk.exe"|OriginalFilename = "${{ inputs.filename }}.exe"|' ./Cargo.toml
+          sed -i -e 's|ProductName = "RustDesk"|ProductName = "${{ inputs.appname }}"|' ./Cargo.toml
+          sed -i -e 's|FileDescription = "RustDesk Remote Desktop"|FileDescription = "${{ inputs.appname }} Remote Desktop"|' ./Cargo.toml
+          sed -i -e 's|OriginalFilename = "rustdesk.exe"|OriginalFilename = "${{ inputs.appname }}.exe"|' ./Cargo.toml
 
       - name: Build rustdesk
         run: |
           ~/.cargo/bin/flutter_rust_bridge_codegen --rust-input ./src/flutter_ffi.rs --dart-output ./flutter/lib/generated_bridge.dart
           python .\build.py --portable --flutter --skip-portable-pack
           mv ./flutter/build/windows/x64/runner/Release ./rustdesk
+          mv ./rustdesk/rustdesk.exe ./rustdesk/${{ inputs.appname }}.exe
 
       - name: icon stuff
         continue-on-error: true
@@ -288,7 +289,7 @@ jobs:
           sed -i '/dpiAware/d' res/manifest.xml
           pushd ./libs/portable
           pip3 install -r requirements.txt
-          python ./generate.py -f ../../rustdesk/ -o . -e ../../rustdesk/rustdesk.exe
+          python ./generate.py -f ../../rustdesk/ -o . -e ../../rustdesk/${{ inputs.appname }}.exe
           popd
           mkdir -p ./SignOutput
           mv ./target/release/rustdesk-portable-packer.exe ./SignOutput/${{ inputs.filename }}.exe
