--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -216,7 +216,6 @@ jobs:
           ~/.cargo/bin/flutter_rust_bridge_codegen --rust-input ./src/flutter_ffi.rs --dart-output ./flutter/lib/generated_bridge.dart
           python .\build.py --portable --flutter --skip-portable-pack
           mv ./flutter/build/windows/x64/runner/Release ./rustdesk
-          mv "./rustdesk/rustdesk.exe" "./rustdesk/${{ inputs.appname }}.exe"
 
       - name: icon stuff
         continue-on-error: true
@@ -291,13 +290,14 @@ jobs:
         shell: bash
         if: env.UPLOAD_ARTIFACT == 'true'
         run: |
+          mv "./rustdesk/rustdesk.exe" "./rustdesk/${{ inputs.appname }}.exe"
           sed -i '/dpiAware/d' res/manifest.xml
           pushd ./libs/portable
           pip3 install -r requirements.txt
           python ./generate.py -f ../../rustdesk/ -o . -e "../../rustdesk/${{ inputs.appname }}.exe"
           popd
           mkdir -p ./SignOutput
-          mv ./target/release/rustdesk-portable-packer.exe "./SignOutput/${{ inputs.filename }}.exe"
+          mv ./target/release/rustdesk-portable-packer.exe "./SignOutput/rustdesk.exe"
 
       # - name: Add MSBuild to PATH
       #   uses: microsoft/setup-msbuild@v2
@@ -339,6 +339,10 @@ jobs:
       #     files: |
       #       ./SignOutput/rustdesk-*.msi
       #       ./SignOutput/rustdesk-*.exe
+
+      - name: rename rustdesk.exe to filename.exe
+        run: |
+          mv ./SignOutput/rustdesk.exe "./SignOutput/${{ inputs.filename }}.exe"
 
       - name: Upload to FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
