--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -248,7 +248,7 @@ jobs:
           url: ${{ secrets.GENURL }}/updategh
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"uuid": "${{ inputs.uuid }}", "status": "50% complete"}'
+          data: '{"uuid": "${{ inputs.uuid }}", "status": "50% complete, this step takes about 5 minutes, be patient."}'
 
       - name: Build rustdesk
         run: |
@@ -311,7 +311,7 @@ jobs:
           url: ${{ secrets.GENURL }}/updategh
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"uuid": "${{ inputs.uuid }}", "status": "70% complete"}'
+          data: '{"uuid": "${{ inputs.uuid }}", "status": "70% complete, this step takes about 5 minutes, be patient."}'
 
       - name: Sign rustdesk files
         uses: GermanBluefox/code-sign-action@v7
