--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -240,8 +240,8 @@ jobs:
         if: ${{ inputs.runasadmin == 'true' }}
         shell: bash
         run: |
-          sed '36d' ./res/manifest.xml
-          sed '43d' ./res/manifest.xml
+          sed '28d' ./flutter/windows/runner/runner.exe.manifest
+          sed '20d' ./flutter/windows/runner/runner.exe.manifest
 
       - name: Deploy Stage
         uses: fjogeleit/http-request-action@v1
